# Durian

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  LICENSE  MODULE.bazel  Makefile  Package.resolved  Package.swift  QUICK_START.md  README.md  SECURITY.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  UI_CHANGES_SUMMARY.md  VIM_KEYBINDINGS.md  VMime.xcconfig  Vagrantfile  add_local_package.swift  add_mime_package.sh  fix_vmime_paths.sh  go.sum  keymaps.json  openapi.yaml  verify_build_settings.sh
cli/cmd/durian/: BUILD.bazel  attachment.go  auth.go  completion.go  contacts.go  draft.go  group.go  help.go  main.go  manpage.go  root.go  rules.go  search.go  send.go  serve.go  show.go  sync.go  tag.go  tagsync.go  validate.go
cli/internal/auth/: BUILD.bazel  auth.go  auth_test.go
cli/internal/config/: BUILD.bazel  config.go  config_test.go  groups.go  groups_test.go  helpers.go  keymaps.go  pkl.go  profiles.go  rules.go  types.go  validate.go  validate_test.go
cli/internal/debug/: BUILD.bazel  debug.go  debug_test.go
cli/internal/encoding/: BUILD.bazel  charset.go  encoding_test.go  header.go  html.go  transfer.go
cli/internal/handler/: BUILD.bazel  contacts.go  convert_thread_test.go  drafts.go  drafts_test.go  events.go  handler.go  handler_test.go  http.go  http_test.go  outbox.go  search.go  show.go  tag.go  tags.go  watcher.go  watcher_test.go
cli/internal/imap/: BUILD.bazel  client.go  exec.go  exec_test.go  flags.go  flags_test.go  gmail_test.go  maildir.go  maildir_test.go  rules.go  rules_test.go  state.go  state_test.go  sync.go  sync_discovery.go  sync_flags.go  sync_mailbox.go  sync_store.go  sync_test.go
cli/internal/mail/: BUILD.bazel  parser.go  parser_test.go  types.go
cli/internal/notmuch/: BUILD.bazel  mock.go  notmuch.go  notmuch_test.go
cli/internal/oauth/: BUILD.bazel  flow.go  keychain.go  oauth_test.go  pkce.go  provider.go  token.go
cli/internal/sanitize/: BUILD.bazel  fixture_test.go  quote.go  quote_test.go  real_test.go  sanitize.go  sanitize_test.go  signature.go  signature_test.go
cli/internal/store/: BUILD.bazel  attachments.go  attachments_test.go  headers.go  headers_test.go  local_drafts.go  local_drafts_test.go  messages.go  messages_test.go  outbox.go  outbox_test.go  search.go  search_test.go  store.go  store_test.go  tags.go  tags_test.go  threads.go  threads_test.go  types.go
gui/: BUILD.bazel  Info.plist  README.md  install.sh  run.sh
gui/Durian.xcodeproj/: project.pbxproj
gui/durian/: ContentView.swift  DurianApp.swift  SettingsManager.swift
gui/durian/AppIcon-Debug.icon/: icon.json
gui/durian/Keymaps/: KeyBuffer.swift  KeySequenceEngine.swift  KeymapHandler.swift  KeymapTypes.swift  KeymapsManager.swift  SequenceMatcher.swift
gui/durian/Managers/: AccountManager.swift  AvatarManager.swift  BannerManager.swift  ConfigManager.swift  ContactsManager.swift  DraftService.swift  EmailSendingManager.swift  ErrorManager.swift  NetworkMonitor.swift  OutboxManager.swift  ProfileManager.swift  SearchManager.swift  SyncManager.swift
gui/durian/Models/: BannerMessage.swift  EmailComposition.swift  Mail.swift  UserFacingError.swift
gui/durian/Network/: EmailBackend.swift  EventStreamClient.swift  MailBackendProtocol.swift  NotmuchBackend.swift  SMTPClient.swift
gui/durian/Utilities/: AddressUtils.swift  ColorExtensions.swift  DarkModeTransform.swift  FileManager+Extensions.swift  KeychainHelper.swift  Log.swift  MIMEBuilder.swift  QuickLookPreview.swift  ScrollViewFinder.swift  ScrollViewModifiers.swift
gui/durian/Views/: AvatarView.swift  BannerView.swift  ComposeForm.swift  ComposeToolbar.swift  ComposeWindow.swift  ComposeWindowView.swift  ContactSuggestionController.swift  ContactSuggestionPopup.swift  EditableWebView.swift  EmailComposeView.swift  EmailDetailView.swift  EmailListView.swift  EmailRowView.swift  EmailWebView.swift  ErrorBannerView.swift  FormattingToolbar.swift  NonScrollingWebView.swift  SearchPopupView.swift  TagPickerView.swift  TokenField.swift
gui/tests/: BannerManagerTests.swift  ConfigTests.swift  ErrorManagerTests.swift  ModelTests.swift
guilinux/: BUILD.bazel  README.md  main.cc  qt_repo.bzl
guilinux/data/: SeedData.h
guilinux/models/: AvatarProvider.h  NetworkClient.h  ProfileModel.h  ThreadModel.h
guilinux/qml/: AvatarHelper.js  DetailView.qml  KeyHandler.qml  Main.qml  SearchPopup.qml  Sidebar.qml  ThreadList.qml  ThreadRow.qml  resources.qrc
guilinux/tests/: icon_map_test.cc
integration/: BUILD.bazel  integration_test.sh
integration/testdata/: config.pkl
linux/: BUILD.bazel  README.md  qt_repo.bzl
linux/models/: IconMap.h  NetworkClient.h  ProfileModel.h  ThreadModel.h
linux/qml/: ActionBar.qml  Avatar.qml  AvatarHelper.js  KeyHandler.qml  Main.qml  SearchPopup.qml  Sidebar.qml  ThreadList.qml  resources.qrc
linux/tests/: profile_model_test.cc  thread_model_test.cc
macos/: BUILD.bazel  Info.plist  install.sh  run.sh
macos/durian/: ContentView+Keymaps.swift  ContentView.swift  DurianApp.swift  SettingsManager.swift
macos/durian/AppIcon.icon/: icon.json
macos/durian/Keymaps/: KeySequenceEngine.swift  KeymapHandler.swift  KeymapTypes.swift  KeymapsManager.swift  SequenceMatcher.swift
macos/durian/Managers/: AccountManager.swift  AttachmentCacheManager.swift  ConfigManager.swift  ContactsManager.swift  DraftManager.swift  DraftService.swift  EmailSendingManager.swift  NetworkMonitor.swift  OutboxManager.swift  ProfileManager.swift  SearchManager.swift  SettingsManager.swift  SyncManager.swift
macos/durian/Models/: EmailComposition.swift  EmailDraftFactory.swift  Mail.swift
macos/tests/: AccountManagerTests.swift  AttachmentCacheManagerTests.swift  BannerManagerTests.swift  ConfigTests.swift  ContactsManagerTests.swift  EmailSendingManagerTests.swift  EmailSendingTests.swift  IntegrationTests.swift  KeyBufferTests.swift  KeymapsMergeTests.swift  OutboxManagerTests.swift  ProfileTests.swift  SearchManagerTests.swift  SequenceMatcherTests.swift  SyncManagerTests.swift
sync/: BUILD.bazel  README.md  install.sh  main.go  main_test.go  openapi.yaml
(+272 files in other folders)
