bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "apple_support", version = "1.24.2")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "rules_swift", version = "3.5.0")
bazel_dep(name = "rules_apple", version = "4.3.2")
bazel_dep(name = "rules_swift_package_manager", version = "1.15.0")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(swift_deps, "swift_package", "swiftpkg_pkl_swift")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//cli:go.mod")
use_repo(go_deps, "com_github_apple_pkl_go", "com_github_emersion_go_imap", "com_github_emersion_go_sasl", "com_github_google_uuid", "com_github_gorilla_mux", "com_github_microcosm_cc_bluemonday", "com_github_spf13_cobra", "org_golang_x_net", "org_golang_x_term", "org_golang_x_text", "org_modernc_sqlite")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

qt_local_repository = use_repo_rule("//linux:qt_repo.bzl", "qt_local_repository")

qt_local_repository(
    name = "qt",
)
