load("@rules_swift//swift:swift.bzl", "swift_library", "swift_test")
load("@rules_apple//apple:macos.bzl", "macos_application")

config_setting(
    name = "release",
    values = {"compilation_mode": "opt"},
)

# Full app library (includes @main entry point) — used by macos_application
swift_library(
    name = "durian_lib",
    srcs = glob(["durian/**/*.swift"]),
    data = glob(
        ["durian/Assets.xcassets/**"],
        exclude = [
            "durian/Assets.xcassets/AppIcon.appiconset/**",
        ],
    ),
    deps = ["@toml_decoder//:TOMLDecoder"],
)

# Testable library (excludes @main to avoid duplicate symbol with test runner)
swift_library(
    name = "durian_testlib",
    testonly = True,
    module_name = "durian_lib",
    srcs = glob(
        ["durian/**/*.swift"],
        exclude = ["durian/DurianApp.swift"],
    ),
    deps = ["@toml_decoder//:TOMLDecoder"],
)

# Core library for CI tests — models, managers, utilities only (no Views).
# Views use macOS 26 APIs (glassEffect) that require Xcode 26, but
# rules_swift test_discoverer crashes on Xcode 26. This target compiles
# on Xcode 16+ and is used by CI test targets.
swift_library(
    name = "durian_core",
    testonly = True,
    module_name = "durian_lib",
    srcs = glob([
        "durian/Models/**/*.swift",
        "durian/Managers/**/*.swift",
        "durian/Utilities/**/*.swift",
        "durian/Network/**/*.swift",
        "durian/Keymaps/**/*.swift",
    ]) + [
        "durian/SettingsManager.swift",
        "durian/EmailHTMLParser.swift",
    ],
    deps = ["@toml_decoder//:TOMLDecoder"],
)

swift_test(
    name = "config_test",
    size = "small",
    srcs = ["tests/ConfigTests.swift"],
    deps = [
        ":durian_testlib",
        "@toml_decoder//:TOMLDecoder",
    ],
)

swift_test(
    name = "profile_test",
    size = "small",
    srcs = ["tests/ProfileTests.swift"],
    deps = [
        ":durian_testlib",
        "@toml_decoder//:TOMLDecoder",
    ],
)

swift_test(
    name = "banner_manager_test",
    size = "small",
    srcs = ["tests/BannerManagerTests.swift"],
    deps = [":durian_testlib"],
)

swift_test(
    name = "model_test",
    size = "small",
    srcs = ["tests/ModelTests.swift"],
    deps = [":durian_testlib"],
)

# CI test targets — use durian_core (no Views) to avoid Xcode 26 requirement
swift_test(
    name = "ci_config_test",
    size = "small",
    srcs = ["tests/ConfigTests.swift"],
    tags = ["ci"],
    deps = [
        ":durian_core",
        "@toml_decoder//:TOMLDecoder",
    ],
)

swift_test(
    name = "ci_profile_test",
    size = "small",
    srcs = ["tests/ProfileTests.swift"],
    tags = ["ci"],
    deps = [
        ":durian_core",
        "@toml_decoder//:TOMLDecoder",
    ],
)

swift_test(
    name = "ci_banner_manager_test",
    size = "small",
    srcs = ["tests/BannerManagerTests.swift"],
    tags = ["ci"],
    deps = [":durian_core"],
)

swift_test(
    name = "ci_model_test",
    size = "small",
    srcs = ["tests/ModelTests.swift"],
    tags = ["ci"],
    deps = [":durian_core"],
)

macos_application(
    name = "Durian",
    app_icons = select({
        ":release": glob(["durian/AppIcon.icon/**"]),
        "//conditions:default": glob(["durian/AppIcon-Debug.icon/**"]),
    }),
    bundle_id = select({
        ":release": "org.js-lab.durian",
        "//conditions:default": "org.js-lab.durian.nightly",
    }),
    bundle_name = select({
        ":release": "Durian",
        "//conditions:default": "DurianNightly",
    }),
    entitlements = "durian/Durian.entitlements",
    infoplists = [":Info.plist"],
    minimum_os_version = "26.0",
    deps = [":durian_lib"],
)
