genrule(
    name = "qml_resources",
    srcs = [
        "qml/resources.qrc",
        "qml/Main.qml",
        "qml/Sidebar.qml",
        "qml/ThreadList.qml",
        "qml/ThreadRow.qml",
        "qml/DetailView.qml",
        "qml/ActionBar.qml",
        "qml/KeyHandler.qml",
        "qml/AvatarHelper.js",
        "qml/MaterialSymbolsOutlined.ttf",
    ],
    outs = ["qrc_resources.cpp"],
    cmd = """
        RCC="$$PWD/$(location @qt//:rcc)" && \
        QRC=$(location qml/resources.qrc) && \
        cd $$(dirname $$QRC)/.. && \
        $$RCC --name resources qml/resources.qrc -o $$OLDPWD/$@
    """,
    tools = ["@qt//:rcc"],
)

genrule(
    name = "moc_thread_model",
    srcs = ["models/ThreadModel.h"],
    outs = ["moc_ThreadModel.cpp"],
    cmd = "$$PWD/$(location @qt//:moc) $(location models/ThreadModel.h) -o $@",
    tools = ["@qt//:moc"],
)

genrule(
    name = "moc_network_client",
    srcs = ["models/NetworkClient.h"],
    outs = ["moc_NetworkClient.cpp"],
    cmd = "$$PWD/$(location @qt//:moc) $(location models/NetworkClient.h) -o $@",
    tools = ["@qt//:moc"],
)

genrule(
    name = "moc_profile_model",
    srcs = ["models/ProfileModel.h"],
    outs = ["moc_ProfileModel.cpp"],
    cmd = "$$PWD/$(location @qt//:moc) $(location models/ProfileModel.h) -o $@",
    tools = ["@qt//:moc"],
)

cc_binary(
    name = "guilinux",
    srcs = [
        "main.cc",
        "models/ThreadModel.h",
        "models/ProfileModel.h",
        "models/IconMap.h",
        "models/NetworkClient.h",
        "data/SeedData.h",
        "third_party/toml.hpp",
        ":qml_resources",
        ":moc_thread_model",
        ":moc_profile_model",
        ":moc_network_client",
    ],
    copts = ["-std=c++17", "-Iguilinux", "-Wno-deprecated-literal-operator"],
    deps = ["@qt//:qt6"],
)
