sh_test(
    name = "integration_test",
    size = "medium",
    srcs = ["integration_test.sh"],
    args = [
        "$(location //cli/cmd/testseeder)",
        "$(location //cli/cmd/durian)",
        "$(location testdata/config.pkl)",
    ],
    data = [
        "testdata/config.pkl",
        "//cli/cmd/durian",
        "//cli/cmd/testseeder",
    ],
    tags = ["integration"],
)
