load("@rules_swift//swift:swift.bzl", "swift_library", "swift_test")
load("@rules_apple//apple:macos.bzl", "macos_application")

config_setting(
    name = "release",
    values = {"compilation_mode": "opt"},
)

config_setting(
    name = "ci",
    values = {
        "define": "ci=true",
        "compilation_mode": "opt",
    },
)

# Full app library (includes @main entry point) — used by macos_application
swift_library(
    name = "durian_lib",
    srcs = glob(["durian/**/*.swift"]),
    data = glob(
        ["durian/Assets.xcassets/**"],
        exclude = [
            "durian/Assets.xcassets/AppIcon.appiconset/**",
        ],
    ),
    deps = ["@toml_decoder//:TOMLDecoder"],
)

# Testable library (excludes @main to avoid duplicate symbol with test runner)
swift_library(
    name = "durian_testlib",
    testonly = True,
    module_name = "durian_lib",
    srcs = glob(
        ["durian/**/*.swift"],
        exclude = ["durian/DurianApp.swift"],
    ),
    deps = ["@toml_decoder//:TOMLDecoder"],
)

# Core library for CI tests — models, managers, utilities only (no Views).
# Views use macOS 26 APIs (glassEffect) that require Xcode 26, but
# rules_swift test_discoverer crashes on Xcode 26. This target compiles
# on Xcode 16+ and is used by CI test targets.
swift_library(
    name = "durian_core",
    testonly = True,
    module_name = "durian_lib",
    srcs = glob([
        "durian/Models/**/*.swift",
        "durian/Managers/**/*.swift",
        "durian/Utilities/**/*.swift",
        "durian/Network/**/*.swift",
        "durian/Keymaps/**/*.swift",
    ]),
    deps = ["@toml_decoder//:TOMLDecoder"],
)

swift_test(
    name = "config_test",
    size = "small",
    srcs = ["tests/ConfigTests.swift"],
    deps = [
        ":durian_testlib",
        "@toml_decoder//:TOMLDecoder",
    ],
)

swift_test(
    name = "profile_test",
    size = "small",
    srcs = ["tests/ProfileTests.swift"],
    deps = [
        ":durian_testlib",
        "@toml_decoder//:TOMLDecoder",
    ],
)

swift_test(
    name = "banner_manager_test",
    size = "small",
    srcs = ["tests/BannerManagerTests.swift"],
    deps = [":durian_testlib"],
)

swift_test(
    name = "model_test",
    size = "small",
    srcs = ["tests/ModelTests.swift"],
    deps = [":durian_testlib"],
)

# CI test targets — use durian_core (no Views) to avoid Xcode 26 requirement
swift_test(
    name = "ci_config_test",
    size = "small",
    srcs = ["tests/ConfigTests.swift"],
    tags = ["ci"],
    deps = [
        ":durian_core",
        "@toml_decoder//:TOMLDecoder",
    ],
)

swift_test(
    name = "ci_profile_test",
    size = "small",
    srcs = ["tests/ProfileTests.swift"],
    tags = ["ci"],
    deps = [
        ":durian_core",
        "@toml_decoder//:TOMLDecoder",
    ],
)

swift_test(
    name = "ci_banner_manager_test",
    size = "small",
    srcs = ["tests/BannerManagerTests.swift"],
    tags = ["ci"],
    deps = [":durian_core"],
)

swift_test(
    name = "ci_model_test",
    size = "small",
    srcs = ["tests/ModelTests.swift"],
    tags = ["ci"],
    deps = [":durian_core"],
)

swift_test(
    name = "sync_manager_test",
    size = "small",
    srcs = ["tests/SyncManagerTests.swift"],
    deps = [":durian_testlib"],
)

swift_test(
    name = "search_manager_test",
    size = "small",
    srcs = ["tests/SearchManagerTests.swift"],
    deps = [":durian_testlib"],
)

swift_test(
    name = "outbox_manager_test",
    size = "small",
    srcs = ["tests/OutboxManagerTests.swift"],
    deps = [":durian_testlib"],
)

swift_test(
    name = "ci_sync_manager_test",
    size = "small",
    srcs = ["tests/SyncManagerTests.swift"],
    tags = ["ci"],
    deps = [":durian_core"],
)

swift_test(
    name = "ci_search_manager_test",
    size = "small",
    srcs = ["tests/SearchManagerTests.swift"],
    tags = ["ci"],
    deps = [":durian_core"],
)

swift_test(
    name = "ci_outbox_manager_test",
    size = "small",
    srcs = ["tests/OutboxManagerTests.swift"],
    tags = ["ci"],
    deps = [":durian_core"],
)

swift_test(
    name = "contacts_manager_test",
    size = "small",
    srcs = ["tests/ContactsManagerTests.swift"],
    deps = [":durian_testlib"],
)

swift_test(
    name = "ci_contacts_manager_test",
    size = "small",
    srcs = ["tests/ContactsManagerTests.swift"],
    tags = ["ci"],
    deps = [":durian_core"],
)

swift_test(
    name = "email_sending_test",
    size = "small",
    srcs = ["tests/EmailSendingTests.swift"],
    deps = [":durian_testlib"],
)

swift_test(
    name = "ci_email_sending_test",
    size = "small",
    srcs = ["tests/EmailSendingTests.swift"],
    tags = ["ci"],
    deps = [":durian_core"],
)

swift_test(
    name = "account_manager_test",
    size = "small",
    srcs = ["tests/AccountManagerTests.swift"],
    deps = [":durian_testlib"],
)

swift_test(
    name = "ci_account_manager_test",
    size = "small",
    srcs = ["tests/AccountManagerTests.swift"],
    tags = ["ci"],
    deps = [":durian_core"],
)

swift_test(
    name = "key_buffer_test",
    size = "small",
    srcs = ["tests/KeyBufferTests.swift"],
    deps = [":durian_testlib"],
)

swift_test(
    name = "ci_key_buffer_test",
    size = "small",
    srcs = ["tests/KeyBufferTests.swift"],
    tags = ["ci"],
    deps = [":durian_core"],
)

swift_test(
    name = "sequence_matcher_test",
    size = "small",
    srcs = ["tests/SequenceMatcherTests.swift"],
    deps = [":durian_testlib"],
)

swift_test(
    name = "ci_sequence_matcher_test",
    size = "small",
    srcs = ["tests/SequenceMatcherTests.swift"],
    tags = ["ci"],
    deps = [":durian_core"],
)

genrule(
    name = "StampedInfoPlist",
    srcs = ["Info.plist"],
    outs = ["Info-stamped.plist"],
    cmd = """
        VERSION=$$(grep STABLE_VERSION bazel-out/stable-status.txt | cut -d' ' -f2)
        BUILD_NUM=$$(grep STABLE_BUILD_NUMBER bazel-out/stable-status.txt | cut -d' ' -f2)
        /usr/libexec/PlistBuddy -c "Clear dict" $@
        /usr/libexec/PlistBuddy -c "Merge $(location Info.plist)" $@
        /usr/libexec/PlistBuddy -c "Add :CFBundleShortVersionString string $$VERSION" $@
        /usr/libexec/PlistBuddy -c "Add :CFBundleVersion string $$BUILD_NUM" $@
    """,
    stamp = True,
)

macos_application(
    name = "Durian",
    app_icons = select({
        ":ci": [],
        ":release": glob(["durian/AppIcon.icon/**"]),
        "//conditions:default": glob(["durian/AppIcon-Debug.icon/**"]),
    }),
    resources = select({
        ":ci": glob(["durian/CompiledIcons/release/**"]),
        "//conditions:default": [],
    }),
    bundle_id = select({
        ":release": "org.js-lab.durian",
        "//conditions:default": "org.js-lab.durian.nightly",
    }),
    bundle_name = select({
        ":release": "Durian",
        "//conditions:default": "DurianNightly",
    }),
    entitlements = "durian/Durian.entitlements",
    infoplists = [":StampedInfoPlist"],
    minimum_os_version = "26.0",
    deps = [":durian_lib"],
)
