load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "sync_lib",
    srcs = ["main.go"],
    importpath = "github.com/durian-dev/durian/sync",
    deps = ["@org_modernc_sqlite//:sqlite"],
)

go_binary(
    name = "durian-sync",
    embed = [":sync_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "sync_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":sync_lib"],
)
