load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "groups.go",
        "helpers.go",
        "keymaps.go",
        "profiles.go",
        "rules.go",
        "types.go",
        "validate.go",
    ],
    importpath = "github.com/durian-dev/durian/cli/internal/config",
    visibility = ["//cli:__subpackages__"],
    deps = ["@com_github_burntsushi_toml//:toml"],
)

go_test(
    name = "config_test",
    size = "small",
    srcs = [
        "config_test.go",
        "groups_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":config"],
)
