load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "debug",
    srcs = ["debug.go"],
    importpath = "github.com/durian-dev/durian/cli/internal/debug",
    visibility = ["//cli:__subpackages__"],
)

go_test(
    name = "debug_test",
    size = "small",
    srcs = ["debug_test.go"],
    embed = [":debug"],
)
